sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
var lgr=getNombreValeur();
var i=0;


}



/*ecart=lgr/2
tant que ecart>0:
  appliquer l'algorithme de tri par insertion
  en comparant i-ecart et i, puis i-2ecart et i-ecart,
  puis i-3ecart et i-2ecart, etc.*/